| Bug #19309 | Partitions: crash if double procedural alter | ||
|---|---|---|---|
| Submitted: | 24 Apr 2006 20:17 | Modified: | 23 Jun 2006 6:27 |
| Reporter: | Peter Gulutzan | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Partitions | Severity: | S3 (Non-critical) |
| Version: | 5.1.10-beta-debug | OS: | Linux (SUSE 10.0) |
| Assigned to: | Mikael Ronström | CPU Architecture: | Any |
[24 Apr 2006 20:17]
Peter Gulutzan
[24 Apr 2006 20:32]
MySQL Verification Team
Thank you for the bug report. Verified as reported:
060425 17:32:05 [Note] /home/miguel/dbs/5.1/libexec/mysqld: ready for connections.
Version: '5.1.10-beta-debug' socket: '/tmp/mysql.sock' port: 3306 Source distribution
[New Thread 1118682032 (LWP 5862)]
Program received signal SIGSEGV, Segmentation fault.
[Switching to Thread 1118682032 (LWP 5862)]
0x0840b98d in ha_partition::min_of_the_max_uint (this=0x92e7628, operator_func={__pfn = 0x1b1, __delta = 0}) at ha_partition.cc:5206
5206 uint min_of_the_max= ((*m_file)->*operator_func)();
(gdb)
[20 Jun 2006 11:38]
Mikael Ronström
patch approved by Sergei Gluhov plus a verbal check with Monty that copying the create_info was ok
[22 Jun 2006 7:23]
Mikael Ronström
Patch will appear in 5.1.12
[23 Jun 2006 6:27]
Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
Documented bugfix in 5.1.12 changelog; closed.
