BUG#19309: Crash if double procedural alter

mysql-test/r/partition.result:
  New test case
mysql-test/t/partition.test:
  New test case
sql/sql_table.cc:
  Added new routine to make copy of create_info struct. This struct is
  manipulated during alter table and create table but needs to remain
  the same for repeated execution in stored procedures or prepared
  statements.